--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ kivy/lib/vidcore_lite/egl.c
 kivy/core/image/_img_sdl2.c
 kivy/core/text/_text_sdl2.c
 kivy/core/window/_window_sdl2.c
+buildozer
+buildozer.
+/Buildozer
